# gomonorepo

./: .gitignore  Jenkinsfile  README.md  WORKSPACE  go.work  go.work.sum
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/.docker/: config.json
lib/msg/: BUILD.bazel  go.mod  message.go
services/app1/: BUILD.bazel  go.mod  main.go
services/app2/: BUILD.bazel  go.mod  main.go
