load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "app1_lib",
    srcs = ["main.go"],
    importpath = "github.com/abhaytiket/gomonorepo/services/app1",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/msg",
        "@com_github_go_chi_chi_v5//:go_default_library",
        "@com_github_go_chi_chi_v5//middleware:go_default_library",
    ],
)

go_binary(
    name = "app1",
    embed = [":app1_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "app1_layer",
    srcs = [":app1"],
    # If the binary depends on RUNFILES, uncomment the attribute below.
    # include_runfiles = True
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/app1"],
    tars = [":app1_layer"],
)

oci_tarball(
    name = "app1_tarball",
    image = ":image",
    repo_tags = ["app1:latest"]
)

oci_push(
    name = "push",
    image = ":image",
    repository = "index.docker.io/v1/sychonet/gomonorepo_app1",
    remote_tags = ["latest"]
)

