load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "app2_lib",
    srcs = ["main.go"],
    importpath = "github.com/abhaytiket/gomonorepo/services/app2",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/msg",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)

go_binary(
    name = "app2",
    embed = [":app2_lib"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = "@alpine_linux//image",
    entrypoint = ["/app2"],
    files = [":app2"],
)
