load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "app2_lib",
    srcs = ["main.go"],
    importpath = "github.com/abhaytiket/gomonorepo/services/app2",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/msg",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)

go_binary(
    name = "app2",
    embed = [":app2_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "app2_layer",
    srcs = [":app2"],
    # If the binary depends on RUNFILES, uncomment the attribute below.
    # include_runfiles = True
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/app2"],
    tars = [":app2_layer"],
)

oci_tarball(
    name = "app2_tarball",
    image = ":image",
    repo_tags = ["app2:latest"]
)

oci_push(
    name = "push",
    image = ":image",
    repository = "sychonet/gomonorepo_app2",
    remote_tags = ["latest"]
)
